Fixed similar items header visibility

--- a/app/assets/stylesheets/pages/_business-item.scss
+++ b/app/assets/stylesheets/pages/_business-item.scss
@@ -405,7 +405,7 @@
 }
 
 .mar-left-28{
-  margin-left: 28px;
+  margin-left: 20px;
 }
 .next-previous-region {
   float: right;
